--- a/css-projects/travel_website/css/style.css
+++ b/css-projects/travel_website/css/style.css
@@ -100,6 +100,11 @@ h1, h2, h3{
     background-color: #fff8fa;
 }
 
+.bg-dark{
+    background-color: #263238;
+}
+
+
 /* ########################## Header Styling ###################### */
 
 .header{
@@ -111,7 +116,7 @@ h1, h2, h3{
     background-repeat: no-repeat;
 }
 
-.header .navbar{
+.navbar{
     padding: 1rem;
 }
 
@@ -120,16 +125,16 @@ h1, h2, h3{
     color: white;
 } */
 
-.header .navbar .logo{
+.navbar .logo{
     float: left;
 }
 
-.header .navbar .nav-items{
+.navbar .nav-items{
     float: right;
     margin-top: 1rem;
 }
 
-.header .navbar .nav-item{
+.navbar .nav-item{
     display: inline-block;
     padding: 1rem;
     text-transform: uppercase;
@@ -275,7 +280,16 @@ h1, h2, h3{
 }
 
 /* ########################## Footer section styling ################# */
+
 .footer{
-    background-color: #263238;
-    border: 4px solid red;
+    background: #263238;
+    color:#f4f4f4;
+    padding: 2rem;
+    text-align: center;
 }
+
+.social-media-links i{
+    margin: 2rem;
+}
+
+/* ######################### about page styling ##################### */
