fixed footer bottom issue

--- a/css-projects/travel_website/css/style.css
+++ b/css-projects/travel_website/css/style.css
@@ -410,3 +410,9 @@ h1, h2, h3{
     display: block;
     clear: both;
 }
+
+.bottom-footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
